--- a/device_management/requirements.txt
+++ b/device_management/requirements.txt
@@ -3,6 +3,7 @@ attrs==25.4.0
 Django==5.2.7
 django-allauth==65.12.1
 django-cors-headers==4.9.0
+django-dbbackup==5.0.1
 django-filter==25.2
 djangorestframework==3.16.1
 djangorestframework_simplejwt==5.5.1
